kubernetes/services/meme-maker-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: meme-maker
spec:
  backend:
    serviceName: meme-maker
    servicePort: 80
